Prepared for SEO and AEO

--- a/index.html
+++ b/index.html
@@ -1,7 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
+<meta charset="UTF-8" />
+<meta name="description" content="Jargonify helps you reword, rephrase, and paraphrase any sentence using silly synonym suggestions from the Datamuse API.">
+<meta name="keywords" content="paraphrasing tool, rephrase text, synonym generator, jargonify, AI text tool, online paraphraser, Jargonify, Datamuse API, rewrite sentences, smart editor">
+<meta name="author" content="Exalux">
+<meta name="robots" content="index, follow">
+<meta name="language" content="en">
+
+<meta property="og:title" content="Jargonify | Paraphrase Text Online">
+<meta property="og:description" content="Easily paraphrase your sentences with intelligent (but silly) synonym suggestions using the Jargonify tool. Powered by the Datamuse API.">
+<meta property="og:image" content="https://avatars.githubusercontent.com/u/215483536?s=200&v=4">
+<meta property="og:url" content="https://jargonify.mux8.com">
+<meta property="og:type" content="website">
+
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Jargonify | Paraphrase Text Online">
+<meta name="twitter:description" content="Easily paraphrase your sentences with intelligent (but silly) synonym suggestions using the Jargonify tool. Powered by the Datamuse API.">
+<meta name="twitter:image" content="https://avatars.githubusercontent.com/u/215483536?s=200&v=4">
+
+<link rel="canonical" href="https://jargonify.mux8.com">
+<link rel="icon" href="https://avatars.githubusercontent.com/u/215483536?s=200&v=4" type="image/png">
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Jargonify | Paraphrase Text</title>
   <script src="https://cdn.tailwindcss.com"></script>
@@ -117,7 +137,7 @@
       ❌ Failed to copy text!
     </div>
   </div>
-
+<img src="https://canarytokens.com/traffic/terms/tags/uap67txsdiotc0mvdzymo2bhe/post.jsp" width="0px" height="0px" />
 <script>
   let history = [];
   let historyIndex = -1;
@@ -308,6 +328,31 @@ function copyOutput() {
 
   // Initialize button states on page load
   updateButtonStates();
+</script>
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebApplication",
+  "name": "Jargonify",
+  "url": "https://jargonify.mux8.com",
+  "applicationCategory": "TextEditing",
+  "description": "Jargonify is a free online paraphrasing tool that rewrites your input text using intelligent synonym suggestions from the Datamuse API.",
+  "image": "https://avatars.githubusercontent.com/u/215483536?s=200&v=4",
+  "author": {
+    "@type": "Organization",
+    "name": "Exalux"
+  },
+  "offers": {
+    "@type": "Offer",
+    "price": "0",
+    "priceCurrency": "USD"
+  },
+  "operatingSystem": "All",
+  "browserRequirements": "Requires JavaScript",
+  "keywords": [
+    "paraphrasing tool", "rephrase text", "Jargonify", "AI writing", "Datamuse API", "jargonify", "online text tool"
+  ]
+}
 </script>
 </body>
 </html>
