--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="description" content="Jargonify helps you reword, rephrase, and paraphrase any sentence using silly synonym suggestions from the Datamuse API.">
-<meta name="keywords" content="paraphrasing tool, rephrase text, synonym generator, jargonify, AI text tool, online paraphraser, Jargonify, Datamuse API, rewrite sentences, smart editor">
+<meta name="keywords" content="paraphrasing tool, rephrase text, synonym generator, jargonify, AI text tool, exa jargonify, online paraphraser, Jargonify, Datamuse API, rewrite sentences, smart editor">
 <meta name="author" content="Exalux">
 <meta name="robots" content="index, follow">
 <meta name="language" content="en">
 
-<meta property="og:title" content="Jargonify | Paraphrase Text Online">
+<meta property="og:title" content="Exa Jargonify | Paraphrase Text Online">
 <meta property="og:description" content="Easily paraphrase your sentences with intelligent (but silly) synonym suggestions using the Jargonify tool. Powered by the Datamuse API.">
 <meta property="og:image" content="https://avatars.githubusercontent.com/u/215483536?s=200&v=4">
 <meta property="og:url" content="https://jargonify.mux8.com">
 <meta property="og:type" content="website">
 
 <meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:title" content="Jargonify | Paraphrase Text Online">
+<meta name="twitter:title" content="Exa Jargonify | Paraphrase Text Online">
 <meta name="twitter:description" content="Easily paraphrase your sentences with intelligent (but silly) synonym suggestions using the Jargonify tool. Powered by the Datamuse API.">
 <meta name="twitter:image" content="https://avatars.githubusercontent.com/u/215483536?s=200&v=4">
 
@@ -79,10 +79,10 @@
   }
   </style>
   <div class="bg-white shadow-xl rounded-2xl p-6 sm:p-8 max-w-3xl w-full relative">
-    <!-- Logo & Brand -->
+    <!-- Logo & Version -->
     <div class="flex items-center mb-5">
       <img src="https://avatars.githubusercontent.com/u/215483536?s=200&v=4" alt="Exalux" class="w-10 h-10 rounded-full mr-3">
-      <span class="text-lg font-semibold text-gray-700">v6/11</span>
+      <span class="text-lg font-semibold text-gray-700">jrg.v0/4</span>
     </div>
 
     <h1 class="text-2xl sm:text-3xl font-bold mb-3 sm:mb-4 text-center text-gray-800">🧠 Jargonify</h1>
