--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <meta property="og:title" content="Exa Jargonify | Paraphrase Text Online">
 <meta property="og:description" content="Easily paraphrase your sentences with intelligent (but silly) synonym suggestions using the Jargonify tool. Powered by the Datamuse API.">
 <meta property="og:image" content="https://avatars.githubusercontent.com/u/215483536?s=200&v=4">
-<meta property="og:url" content="https://jargonify.mux8.com">
+<meta property="og:url" content="https://exalux.github.io/jargonify">
 <meta property="og:type" content="website">
 
 <meta name="twitter:card" content="summary_large_image">
@@ -19,7 +19,7 @@
 <meta name="twitter:description" content="Easily paraphrase your sentences with intelligent (but silly) synonym suggestions using the Jargonify tool. Powered by the Datamuse API.">
 <meta name="twitter:image" content="https://avatars.githubusercontent.com/u/215483536?s=200&v=4">
 
-<link rel="canonical" href="https://jargonify.mux8.com">
+<link rel="canonical" href="https://exalux.github.io/jargonify">
 <link rel="icon" href="https://avatars.githubusercontent.com/u/215483536?s=200&v=4" type="image/png">
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -334,7 +334,7 @@ function copyOutput() {
   "@context": "https://schema.org",
   "@type": "WebApplication",
   "name": "Jargonify",
-  "url": "https://jargonify.mux8.com",
+  "url": "https://exalux.github.io/jargonify",
   "applicationCategory": "TextEditing",
   "description": "Jargonify is a free online paraphrasing tool that rewrites your input text using intelligent synonym suggestions from the Datamuse API.",
   "image": "https://avatars.githubusercontent.com/u/215483536?s=200&v=4",
